syntax = "proto3";

package stats.service.collector;

import "google/protobuf/empty.proto";
import "stats/message/user_action.proto";

option java_package = "ru.practicum.ewm.stats.protobuf";


service UserActionController {

  rpc CollectUserAction(stats.message.UserActionProto) returns (google.protobuf.Empty);
}